5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1798_2567.log
== TEST (2019-06-07 00:11:04) 
-- CODE:
n = int(input("entrada: "))
s = '*'
i = 0
while (i < n):
	s = s * (n - i)
	i = i + 1
print(s)
-- OUTPUT:
****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 00:12:11) 
-- CODE:
n = int(input("entrada: "))
s = '*'
i = 0
while (i < n):
	s = s * (n - i)
	i = i + 1
	print(s)
print(i)

-- OUTPUT:
********
********************************************************
************************************************************************************************************************************************************************************************************************************************************************************************************************************************
*********************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:46:17) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))
for i in range(n, 0, -1):
	print(i*'*')

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:48:19) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))
for i in range(n, 0, -1):
	print(i*'*')
for i in range(n, -1, 0):
	print(i + 1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:49:59) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))
for i in range(n, 0, -1):
	print(i*'*')
for i in range(1, 0, 1):
	print(i * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:53:15) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))
for i in range(n, 0, -1):
	print(i*'*')
for i in range(1, 0, 1):
	print(i * '*')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:53:41) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))
for i in range(n, 0, -1):
	print(i*'*')
for i in range(1,0,1):
	print(i * '*')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:54:02) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))
for i in range(n, 0, -1):
	print(i*'*')
for i in range(1,0,n):
	print(i * '*')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:54:17) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))
for i in range(n, 0, -1):
	print(i*'*')
   for i in range(1,0,n):
		print(i * '*')
-- ERROR:
File "XXXX", line 5
    for i in range(1,0,n):
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:54:26) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))
for i in range(n, 0, -1):
	print(i*'*')
for i in range(1,0,n):
	print(i * '*')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:54:42) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n, 0, -1):
	print(i*'*')

	for i in range(1,0,n):
		print(i * '*')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:54:52) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n, 0, -1):
	print(i*'*')

	for i in range(1,0,1):
		print(i * '*')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:56:29) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n, 0, -1):
	print(i*'*')

for i in range(1,0,1):
	print(i*'*')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:56:52) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n, 0, -1):
	print(i*'*')

for i in range(1,0,1):
	print(i*'*')
-- EXECUTION TIME:
1.03992
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:57:48) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n, 0, -1):
	print(i*'*')

for i in range(1,0,1):
	print(i*'*')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:01:37) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n,0,-1):
	print(i*"*")
for i in range(1, 0, 1):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:03:01) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n,0,-1):
	print(i*"*")
for i in range(1, 0, 1):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:03:17) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n,0,-1):
	print(i*"*")
for i in range(1, 0, 1):
	print(i*"*")
-- EXECUTION TIME:
1.16461
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:03:47) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n,0,-1):
	print(i*"*")
	for i in range(1, 0, 1):
		print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:03:53) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n,0,-1):
	print(i*"*")
	for i in range(1, 0, 1):
		print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:04:17) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))


	
	
	
for i in range(1, 0, 1):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:04:48) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n,0,-1):
	print(i*"*")
	
	
	
for i in range(1, 0, i):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:04:57) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n,0,-1):
	print(i*"*")
	
	
	
for i in range(1, 0, n):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:05:06) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n,0,-1):
	print(i*"*")
	
	
	
for i in range(1, 0, -1):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:05:21) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n,0,-1):
	print(i*"*")
	
	
	
for i in range(-1, 0, 1):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:05:34) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n,0,-1):
	print(i*"*")
	
	
	
for i in range(i, 0, 1):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:05:59) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n,0,-1):
	print(i*"*")
	
	
	
for i in range(1, 0):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:06:11) 
-- CODE:
from numpy import*
n = array(eval(input("NUMERO: ")))

for i in range(n,0,-1):
	print(i*"*")
	
	
	
for i in range(1, -1):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:08:19) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))

for i in renge(x,0,-1):
	print(i*"*")
for i in range(1, 0, 1):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:08:32) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))

for i in range(x,0,-1):
	print(i*"*")
for i in range(1, 0, 1):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:48:53) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))

for i in range(x,0,-1):
	print(i*"*")
for i in range(1, 0, 1):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:07:03) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))

for i in range(x,0,-1):
	print(i*"*")
for i in range(1, n+1):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:07:25) 
-- CODE:
x = int(input("numero:"))

for i in range(x,0,-1):
	print(i*"*")
for i in range(1, n+1):
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    for i in range(1, n+1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:07:53) 
-- CODE:
x = int(input("numero:"))

for i in range(x,0,-1):
	print(i*"*")
for i in range(1, x+1):
	print(i*"*")
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:08:01) 
-- CODE:
x = int(input("numero:"))

for i in range(x,0,-1):
	print(i*"*")
for i in range(1, x+1):
	print(i*"*")
-- EXECUTION TIME:
0.777602
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:46:14) 
-- CODE:
x = int(input("numero:"))

for i in range(x,x-1):
	print(i*"*")
for i in range(1, x+1):
	print(i*"*")
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:46:37) 
-- CODE:
x = int(input("numero:"))

for i in range(x,0,-1):
	print(i*"*")
for i in range(1, x+1):
	print(i*"*")
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
